--- a/journal.css
+++ b/journal.css
@@ -1,8 +1,8 @@
-/*@font-face {
+@font-face {
 	font-family: "Emblema One";
-	src: url("http://wickedlysmart.com/hfhtmlcss/chapter8/journal/EmblemaOne-Regular.woff"), 
+	src: EmblemaOne-Regular.woff", 
 	     url("http://wickedlysmart.com/hfhtmlcss/chapter8/journal/EmblemaOne-Regular.ttf"); 
-}*/
+}
 body {
   font-family:     Verdana, Geneva, Arial, sans-serif;
   font-size:       small;
