--- a/journal.css
+++ b/journal.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "Emblema One";
-	src: EmblemaOne-Regular.woff", 
+	src: url(EmblemaOne-Regular.woff) format("woff"), 
 	     url("http://wickedlysmart.com/hfhtmlcss/chapter8/journal/EmblemaOne-Regular.ttf"); 
 }
 body {
