--- a/receipts/zapekanki.css
+++ b/receipts/zapekanki.css
@@ -9,14 +9,14 @@ body {
 h1 {
 	color: #DA291C;
 	font-size: 250%;
-	border-bottom: 1px dotted;
+	border-bottom: 1px dashed;
 	font-weight: bold;
 	text-align: center;
 	font-family: Tahoma, Geneva, sans-serif;
 }
 h2 {
 	color: white;
-	font-size: 170%;
+	font-size: 190%;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	padding-top: 50px;
 }
@@ -36,4 +36,36 @@ div {
 a {
 	color: #DA291C;
 	font-weight: bold;
+}
+#menu {
+	line-height: 200%;
+	border-width: 10px;
+	border-style: solid;
+	border-top-right-radius: 0px;
+	border-top-left-radius: 50px;
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+	border-color: #DA291C;
+	border-bottom-color: #FFC72C;
+	border-bottom-style: dashed;
+	background-color: white;
+	padding: 30px;
+	padding-top: 10px;
+	margin-left: 5%;
+	margin-right: 5%;
+	background-image: url(cocktail.gif);
+	background-position: top left;
+	background-repeat: no-repeat;
+}
+ol {
+	line-height: 1.5em;
+}
+#footer {
+	font-size: small;
+	font-style: italic;
+	background-color: #8B4513;
+	color: white;
+	margin-right: 0px;
+	margin-left: 0px;
+	padding: 10px;
 }
