--- a/index.css
+++ b/index.css
@@ -1,25 +1,61 @@
 body {
-	background-color: #368d80;
-	color: #f1c27f;
+	background-color: #dbf79e;
+	color: black;
 	font-family: sans-serif;
 	font-size: large;
 	margin: 0px;
 	}
-h1 {
+div h1 {
 	font-size: 200%;
-	color: #dcb98b;
+	color: #26309b;
 	text-align: center;
-	height: 150px;
-	padding: 0px;
+	vertical-align: center;
+	padding: 50px 0px 50px 0px;
 	margin: 0px;
+	position: relative;
+	width: 400px;
+	height: 50px;
+	font-family: Arial;
+	/*Chrome, Safari, Opera*/
+	-webkit-animation-name: movewords;
+	-webkit-animation-duration: 6s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-delay: 0s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-direction: alternate;
+	-webkit-animation-play-state: running;
+	/*Стандартный синтаксис*/
+	animation-name: movewords;
+	animation-duration: 10s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-play-state: running;
+	}
+	/*Chrome, Safari, Opera*/
+	@-webkit-keyframes movewords {
+	0%   {left: 0px; top: 0px;}
+	25%  {left: 100px; top: 30px;}
+	50%  {left: 200px; top: 0px;}
+	75%  {left: 300px; top: 30px;}
+	100% {left: 400px; top: 0px;}
+	}
+	/*Стандартный синтаксис*/
+	@keyframes movewords {
+	0%   {left: 0px; top: 0px;}
+	25%  {left: 100px; top: 30px; color: red;}
+	50%  {left: 200px; top: 0px;}
+	75%  {left: 300px; top: 30px; color: red;}
+	100% {left: 400px; top: 0px;}
 	}
 #logo {
 	position: absolute;
-	left: 0px;
+	right: 0px;
 	top: 0px;
 }	
 nav {
-	background-color: #81a888;
+	background-color: #8fa8d8;
 	text-align: center;
 	padding: 3px;
 }	
@@ -34,7 +70,7 @@ nav li {
 nav ul li a:link, nav ul li a:visited {
 	text-decoration: none;
 	border-bottom: none;
-	color: black;
+	color: #26309b;
 	font-size: 125%;
 }
 nav ul li a:hover {
@@ -42,7 +78,7 @@ nav ul li a:hover {
 }
 #video {
 	background-color: black;
-	text-align: right;
+	text-align: center;
 }
 footer {
 	background-color: black;
