--- a/index.css
+++ b/index.css
@@ -63,8 +63,11 @@ nav ul {
 	list-style-type: none;
 }
 nav li {
-	display: inline;
-	padding: 15px 15px 15px 0px;
+	display: inline-block;
+	width: 350px;
+	height: 50px;
+	border-style: solid;
+	padding: 15px 15px 15px 15px;
 	vertical-align: middle;
 }
 nav ul li a:link, nav ul li a:visited {
