--- a/xoxo/xoxo.css
+++ b/xoxo/xoxo.css
@@ -9,10 +9,13 @@
 		.lightBody {
 			background: white;
 		}
+		#loadImages {
+			display: none;
+		}
 		#colorMode {
 			position: absolute;
-			top: 5px;
-			right: 5px;
+			top:  10px;
+			right: 10px;
 			width: 48px;
 			height: 48px;
 			margin: auto;
