--- a/index.css
+++ b/index.css
@@ -1,91 +1,158 @@
 body {
-	background-color: #dbf79e;
-	color: black;
-	font-family: sans-serif;
-	font-size: large;
-	margin: 0px;
-	}
-div h1 {
-	font-size: 200%;
-	color: #26309b;
-	text-align: center;
-	vertical-align: center;
-	padding: 50px 0px 50px 0px;
-	margin: 0px;
-	position: relative;
-	width: 400px;
-	height: 50px;
-	font-family: Arial;
-	/*Chrome, Safari, Opera*/
-	-webkit-animation-name: movewords;
-	-webkit-animation-duration: 6s;
-	-webkit-animation-timing-function: linear;
-	-webkit-animation-delay: 0s;
-	-webkit-animation-iteration-count: infinite;
-	-webkit-animation-direction: alternate;
-	-webkit-animation-play-state: running;
-	/*Стандартный синтаксис*/
-	animation-name: movewords;
-	animation-duration: 6s;
-	animation-timing-function: linear;
-	animation-delay: 0s;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
-	animation-play-state: running;
-	}
-	/*Chrome, Safari, Opera*/
-	@-webkit-keyframes movewords {
-	0%   {left: 0px; top: 0px;}
-	25%  {left: 50px; top: 30px;}
-	50%  {left: 100px; top: 0px;}
-	75%  {left: 150px; top: 30px;}
-	100% {left: 200px; top: 0px;}
-	}
-	/*Стандартный синтаксис*/
-	@keyframes movewords {
-	0%   {left: 0px; top: 0px;}
-	25%  {left: 50px; top: 30px; color: red;}
-	50%  {left: 100px; top: 0px;}
-	75%  {left: 150px; top: 30px; color: red;}
-	100% {left: 200px; top: 0px;}
-	}
-#logo {
+	background: #FFFFFF;
+}
+
+a {
+	color: white;
+	text-decoration: none;
+	font-size: 20px;
+}
+
+header {
 	position: absolute;
+	height: 116px;
+	left: 0px;
 	right: 0px;
 	top: 0px;
-}	
-nav {
-	background-color: #8fa8d8;
-	text-align: center;
-	padding: 3px;
-}	
-nav ul {
-	list-style-type: none;
+	background: linear-gradient(180deg, #56CCF2 0%, #FFFFFF 121.12%);
 }
-nav li {
-	display: inline-block;
-	width: 360px;
-	border-style: solid;
-	margin: 10px;
-	padding: 15px 15px 15px 15px;
-	vertical-align: middle;
+
+#logo {
+	position: absolute;
+width: 68px;
+height: 68px;
+left: 24px;
+top: 24px;
+background: url("logo.png");
 }
-nav ul li a:link, nav ul li a:visited {
-	text-decoration: none;
-	border-bottom: none;
-	color: #26309b;
-	font-size: 125%;
+
+#logoText {
+	position: absolute;
+width: 176px;
+height: 116px;
+left: 120px;
+top: 0px;
+
+font-family: Arial;
+font-style: italic;
+font-weight: bold;
+font-size: 36px;
+line-height: 41px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+
 }
-nav ul li a:hover {
-	font-weight: bold;
+
+#headerText {
+	position: absolute;
+height: 116px;
+left: 296px;
+right: 40px;
+top: 0px;
+
+font-family: Arial;
+font-style: italic;
+font-weight: bold;
+font-size: 24px;
+line-height: 100%;
+
+display: flex;
+align-items: center;
+text-align: right;
+
+color: #000000;
+
 }
+
+#intro {
+	position: absolute;
+height: 208px;
+left: 40px;
+right: 40px;
+top: 116px;
+
+font-family: Arial;
+font-style: normal;
+font-weight: normal;
+font-size: 36px;
+line-height: 41px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+
+}
+
+#content {
+position: absolute;
+left: 0px;
+right: 0px;
+top: 324px;
+
+border: 1px solid #000000;
+box-sizing: border-box;
+}
+
+#cB1, #cB2, #cB3, #cB4 {
+position: relative;
+width: 328px;
+height: 150px;
+left: 0px;
+top: 0px;
+
+background: linear-gradient(254.34deg, #E1E1E1 1.52%, #5C5C5C 47.29%, #000000 100%);
+}
+
 #video {
-	background-color: black;
-	text-align: center;
+	position: absolute;
+width: 428px;
+height: 240px;
+right: 40px;
+top: 680px;
+
+background: #C4C4C4;
 }
+
 footer {
-	background-color: black;
-	color: white;
-	text-align: center;
-	font-size: 75%;
+	position: absolute;
+height: 68px;
+left: 0px;
+right: 0px;
+top: 956px;
+
+background: #000000;
+}
+
+#footerText {
+position: absolute;
+height: 67px;
+left: 40px;
+right: 40px;
+top: 957px;
+
+font-family: Arial;
+font-style: normal;
+font-weight: normal;
+font-size: 13px;
+line-height: 15px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #FFFFFF;
+
+}
+
+#wtfCat {
+position: absolute;
+width: 40px;
+height: 40px;
+right: 14px;
+top: 970px;
+
+background: #C4C4C4;
 }
