--- a/xoxo/xoxo.css
+++ b/xoxo/xoxo.css
@@ -15,13 +15,11 @@
 			position: absolute;
 			top: 0px;
 			left: 0px;
-			height: 200px;
-			width: 200px;
 		}
 		#colorMode {
 			position: absolute;
-			top:  10px;
-			right: 10px;
+			top:  40px;
+			right: calc(50% - 604px / 2 - 80px);
 			width: 48px;
 			height: 48px;
 			margin: auto;
@@ -42,6 +40,7 @@
 		#messageArea {
 			position: relative;
 			margin: auto;
+			padding: 40px 0px 0px;
 			color: #1371C8;
 			text-align: center;
 			font-size: 50px;
