--- a/xoxo/xoxo.css
+++ b/xoxo/xoxo.css
@@ -1,263 +1,254 @@
 @font-face {
-			font-family: 'myFont';
-			src: url('Capture_it-webfont.woff') format('woff');
-		}
-		body {
-		}
-		.darkBody {
-			background: #222222;
-		}
-		.lightBody {
-			background: white;
-		}
-		#soundMode {
-			position: absolute;
-			top:  40px;
-			left: calc(50% - 604px / 2 - 80px);
-			width: 48px;
-			height: 48px;
-			margin: auto;
-		}
-		.mute {
-			background: url(mute.png);
-		}
-		.sound {
-			background: url(sound.png);
-		}
-		#colorMode {
-			position: absolute;
-			top:  40px;
-			right: calc(50% - 604px / 2 - 80px);
-			width: 48px;
-			height: 48px;
-			margin: auto;
-		}
-		.darkMode {
-			background: url(darkMode.png) no-repeat center center;
-		}
-		.lightMode {
-			background: url(lightMode.png) no-repeat center center;
-		}
-		#board {
-			position: relative;
-			width: 604px;
-			height: 604px;
-			margin: auto;
-			background: url("board.png") no-repeat;
-		}
-		#messageArea {
-			position: relative;
-			margin: auto;
-			padding: 40px 0px 0px;
-			color: #1371C8;
-			text-align: center;
-			font-size: 50px;
-			font-family: 'myFont', Arial;
-		}
-		#statArea {
-			position: relative;
-			top: 605px;
-			margin: auto;
-			color: #1371C8;
-			text-align: center;
-			font-size: 50px;
-			font-family: 'myFont', Arial;
-			display: block;			
-		}
-		table {
-			position: absolute;
-			left: 0px;
-			top: 0px;
-			border-spacing: 0px;
-		}
-		td {
-			width: 200px;
-			height: 200px;
-		}
-		.x {
-			background: url(x.png) no-repeat center center;
-		}
-		.o {
-			background: url(o.png) no-repeat center center;
-		}
-		#starScore {
-			position: absolute;
-			top:  716px;
-			left: calc(50% - 604px / 2 - 80px);
-			width: 48px;
-			height: 48px;
-			margin: auto;
-			text-align: center;
-			line-height: 48px;
-			font-weight: bold;
-			font-size: 24px;
-			font-family: Arial;
-			background: url(starScore.png) no-repeat center center;
-		}
-		#window {
-			display: block;
-			position: absolute;
-			top: 50px;
-			left: 50px;
-			height: 500px;
-			width: 500px;
-			border: solid #1371C8;
-			text-align: center;
-			margin: auto;
-			z-index: 2;
-			font-size: 50px;
-			font-family: Arial;
-			border-radius: 10px;
-		}
-		.lightWindow {
-			background: #85C8DD;
-		}
-		.darkWindow {
-			background: radial-gradient(85.7% 85.7% at 50% 50%, #74D7F7 0%, #000000 100%);			
-		}
-		#winLine {
-			position: absolute;
-			left: 0px;
-			top: 0px;
-			width: 604px;
-			height: 604px;
-			margin: auto;
-			display: none;			
-		}
-		.row0 {
-			background: url('winRow0.png') no-repeat;	
-		}
-		.row1 {
-			background: url('winRow1.png') no-repeat;	
-		}
-		.row2 {
-			background: url('winRow2.png') no-repeat;	
-		}
-		.col0 {
-			background: url('winCol0.png') no-repeat;	
-		}
-		.col1 {
-			background: url('winCol1.png') no-repeat;	
-		}
-		.col2 {
-			background: url('winCol2.png') no-repeat;	
-		}
-		.dia1 {
-			background: url('winDia1.png') no-repeat;	
-		}
-		.dia2 {
-			background: url('winDia2.png') no-repeat;	
-		}
-		#chooseSymbol {
-			position: absolute;
-			width: 417px;
-			height: 84px;
-			left: 42px;
-			top: 101px;
-			color: blue;
-			font-size: 36px;
-			font-family: Arial;			
-		}
-		#buttonX {
-			position: absolute;
-			width: 198px;
-			height: 148px;
-			left: 42px;
-			top: 258px;
-			background: url('xButton.png');
-		}
-		#buttonO {
-			position: absolute;
-			width: 198px;
-			height: 148px;
-			left: 269px;
-			top: 258px;
-			background: url('oButton.png');			
-		}
-		#newGameButton {
-			position: absolute;
-			top: 750px;
-			left: 0px;
-			text-align: center;
-			line-height: 140px;
-			margin: 0px 20px;
-			display: none;
-			background: url('button.png') no-repeat center center;
-			width: 234px;
-			height: 148px;
-			color: white;
-			font-size: 30px;
-			font-family: Arial;
-			vertical-align: middle;
-		}
-		#continueGameButton {
-			position: absolute;
-			top: 750px;
-			right: 0px;
-			text-align: center;
-			line-height: 140px;
-			margin: 0px 20px;
-			display: none;
-			background: url('button.png') no-repeat center center;
-			width: 234px;
-			height: 148px;
-			color: white;
-			font-size: 30px;
-			font-family: Arial;
-		}
-		#newGameButton, #continueGameButton, #window {
-					/*Chrome, Safari, Opera*/
-			-webkit-animation-name: showButtons;
-			-webkit-animation-duration: 0.5s;
-			-webkit-animation-timing-function: linear;
-			-webkit-animation-delay: 0s;
-			-webkit-animation-iteration-count: 1;
-			-webkit-animation-direction: normal;
-			-webkit-animation-play-state: running;
-			/*Стандартный синтаксис*/
-			animation-name: showButtons;
-			animation-duration: 0.5s;
-			animation-timing-function: linear;
-			animation-delay: 0s;
-			animation-iteration-count: 1;
-			animation-direction: normal;
-			animation-play-state: running;
-		}
-		/*Chrome, Safari, Opera*/
-		@-webkit-keyframes showButtons {
-			0%   {opacity: 0%;}
-			25%  {opacity: 25%;}
-			50%  {opacity: 50%;}
-			75%  {opacity: 75%;}
-			100% {opacity: 100%;}
-		}
-		/*Стандартный синтаксис*/
-		@keyframes showButtons {
-			0%   {opacity: 0%;}
-			25%  {opacity: 25%;}
-			50%  {opacity: 50%;}
-			75%  {opacity: 75%;}
-			100% {opacity: 100%;}
-		}
-		.winStar {
-			opacity: 0%;
-			animation-name: fadeStar;
-			animation-duration: 1s;
-			animation-timing-function: linear;
-			animation-delay: 0s;
-			animation-iteration-count: 1;
-			animation-direction: normal;
-			animation-play-state: running;
-
-		    -webkit-transition: -webkit-transform 1s ease-out;
-	    	transition: transform 1s ease-out;
-	    	-webkit-transform: rotate(360deg) scale(1.5);
-	    	transform: rotate(360deg) scale(10);
-		}
-		@keyframes fadeStar {
-			0%   {opacity: 100%;}
-			25%  {opacity: 75%;}
-			50%  {opacity: 50%;}
-			75%  {opacity: 25%;}
-			100% {opacity: 0%;}
-		}
+	font-family: 'myFont';
+	src: url('Capture_it-webfont.woff') format('woff');
+}
+body {
+}
+.darkBody {
+	background: #222222;
+}
+.lightBody {
+	background: white;
+}
+#soundMode {
+	position: absolute;
+	top:  40px;
+	left: calc(50% - 604px / 2 - 80px);
+	width: 48px;
+	height: 48px;
+	margin: auto;
+}
+.mute {
+	background: url(mute.png);
+}
+.sound {
+	background: url(sound.png);
+}
+#colorMode {
+	position: absolute;
+	top:  40px;
+	right: calc(50% - 604px / 2 - 80px);
+	width: 48px;
+	height: 48px;
+	margin: auto;
+}
+.darkMode {
+	background: url(darkMode.png) no-repeat center center;
+}
+.lightMode {
+	background: url(lightMode.png) no-repeat center center;
+}
+#board {
+	position: relative;
+	width: 604px;
+	height: 604px;
+	margin: auto;
+	background: url("board.png") no-repeat;
+}
+#messageArea {
+	position: relative;
+	margin: auto;
+	padding: 40px 0px 0px;
+	color: #1371C8;
+	text-align: center;
+	font-size: 50px;
+	font-family: 'myFont', Arial;
+}
+#statArea {
+	position: relative;
+	top: 605px;
+	margin: auto;
+	color: #1371C8;
+	text-align: center;
+	font-size: 50px;
+	font-family: 'myFont', Arial;
+	display: block;			
+}
+table {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	border-spacing: 0px;
+}
+td {
+	width: 200px;
+	height: 200px;
+}
+.x {
+	background: url(x.png) no-repeat center center;
+}
+.o {
+	background: url(o.png) no-repeat center center;
+}
+#starScore {
+	position: absolute;
+	top:  730px;
+	left: calc(50% - 604px / 2 - 80px);
+	width: 48px;
+	height: 48px;
+	margin: auto;
+	text-align: center;
+	line-height: 48px;
+	font-weight: bold;
+	font-size: 24px;
+	font-family: Arial;
+	background: url(starScore.png) no-repeat center center;
+}
+#window {
+	display: block;
+	position: absolute;
+	top: 50px;
+	left: 50px;
+	height: 500px;
+	width: 500px;
+	border: solid #1371C8;
+	text-align: center;
+	margin: auto;
+	z-index: 2;
+	font-size: 50px;
+	font-family: Arial;
+	border-radius: 10px;
+}
+.lightWindow {
+	background: #85C8DD;
+}
+.darkWindow {
+	background: radial-gradient(85.7% 85.7% at 50% 50%, #74D7F7 0%, #000000 100%);			
+}
+#winLine {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 604px;
+	height: 604px;
+	margin: auto;
+	display: none;			
+}
+.row0 {
+	background: url('winRow0.png') no-repeat;	
+}
+.row1 {
+	background: url('winRow1.png') no-repeat;	
+}
+.row2 {
+	background: url('winRow2.png') no-repeat;	
+}
+.col0 {
+	background: url('winCol0.png') no-repeat;	
+}
+.col1 {
+	background: url('winCol1.png') no-repeat;	
+}
+.col2 {
+	background: url('winCol2.png') no-repeat;	
+}
+.dia1 {
+	background: url('winDia1.png') no-repeat;	
+}
+.dia2 {
+	background: url('winDia2.png') no-repeat;	
+}
+#chooseSymbol {
+	position: absolute;
+	width: 417px;
+	height: 84px;
+	left: 42px;
+	top: 101px;
+	color: blue;
+	font-size: 36px;
+	font-family: Arial;			
+}
+#buttonX {
+	position: absolute;
+	width: 198px;
+	height: 148px;
+	left: 42px;
+	top: 258px;
+	background: url('xButton.png');
+}
+#buttonO {
+	position: absolute;
+	width: 198px;
+	height: 148px;
+	left: 269px;
+	top: 258px;
+	background: url('oButton.png');			
+}
+#newGameButton {
+	position: absolute;
+	top: 750px;
+	left: 0px;
+	text-align: center;
+	line-height: 140px;
+	margin: 0px 20px;
+	display: none;
+	background: url('button.png') no-repeat center center;
+	width: 234px;
+	height: 148px;
+	color: white;
+	font-size: 30px;
+	font-family: Arial;
+	vertical-align: middle;
+}
+#continueGameButton {
+	position: absolute;
+	top: 750px;
+	right: 0px;
+	text-align: center;
+	line-height: 140px;
+	margin: 0px 20px;
+	display: none;
+	background: url('button.png') no-repeat center center;
+	width: 234px;
+	height: 148px;
+	color: white;
+	font-size: 30px;
+	font-family: Arial;
+}
+#newGameButton, #continueGameButton, #window {
+	animation-name: showButtons;
+	animation-duration: 0.5s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: 1;
+	animation-direction: normal;
+	animation-play-state: running;
+}
+@keyframes showButtons {
+	0%   {opacity: 0%;}
+	25%  {opacity: 25%;}
+	50%  {opacity: 50%;}
+	75%  {opacity: 75%;}
+	100% {opacity: 100%;}
+}
+.winStar {
+	opacity: 0%;
+	animation-name: fadeStar;
+	animation-duration: 1s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: 1;
+	animation-direction: normal;
+	animation-play-state: running;
+   	transition: transform 1s ease-out;
+   	transform: rotate(360deg) scale(10);
+}
+.failStar {
+	opacity: 0%;
+	animation-name: fadeStar;
+	animation-duration: 1s;
+	animation-timing-function: linear;
+	animation-delay: 0s;
+	animation-iteration-count: 1;
+	animation-direction: normal;
+	animation-play-state: running;
+   	transition: transform 1s ease-out;
+   	transform: scale(5);
+}
+@keyframes fadeStar {
+	0%   {opacity: 100%;}
+	25%  {opacity: 75%;}
+	50%  {opacity: 50%;}
+	75%  {opacity: 25%;}
+	100% {opacity: 0%;}
+}
