--- a/xoxo/xoxo.css
+++ b/xoxo/xoxo.css
@@ -17,6 +17,7 @@ body {
 	width: 48px;
 	height: 48px;
 	margin: auto;
+	z-index: 2;
 }
 .mute {
 	background: url(mute.png);
@@ -31,6 +32,7 @@ body {
 	width: 48px;
 	height: 48px;
 	margin: auto;
+	z-index: 2;
 }
 .darkMode {
 	background: url(darkMode.png) no-repeat center center;
@@ -87,6 +89,7 @@ td {
 	width: 48px;
 	height: 48px;
 	margin: auto;
+	z-index: 2;
 	text-align: center;
 	line-height: 48px;
 	font-weight: bold;
