--- a/xoxo/xoxo.css
+++ b/xoxo/xoxo.css
@@ -14,6 +14,60 @@ body {
 	background: white;
 }
 
+#loadScreen {
+	position: absolute;
+	display: block;
+	z-index: 3;
+	width: 780px;
+	height: 1100px;
+	left: calc(50% - 780px/2);
+	top: 0px;
+	background: rgba(32, 134, 230, 0.8);
+	backdrop-filter: blur(15px);
+	border-radius: 100px;
+}
+
+#header {
+	position: absolute;
+	width: 744px;
+	height: 110px;
+	left: calc(50% - 744px/2);
+	top: 234px;
+	font-family: 'myFont', Arial;
+	font-size: 64px;
+	line-height: 74px;
+	display: block;
+	align-items: center;
+	text-align: center;
+	color: #FFFFFF;
+}
+
+#logo {
+	position: absolute;
+	width: 286px;
+	height: 267px;
+	left: calc(50% - 274px/2);
+	top: 426px;
+	background: url(logo.png) no-repeat center center;
+}
+
+#loading {
+	position: absolute;
+	width: 226px;
+	height: 141px;
+	left: calc(50% - 226px/2);
+	top: 781px;
+	font-family: Arial;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 36px;
+	line-height: 41px;
+	display: block;
+	align-items: center;
+	text-align: center;
+	color: #FFFFFF;
+}
+
 #field {
 	position: absolute;
 	width: 780px;
