--- a/xoxo/xoxo.css
+++ b/xoxo/xoxo.css
@@ -24,15 +24,15 @@ body {
 	top: 0px;
 	background: rgba(32, 134, 230, 0.8);
 	backdrop-filter: blur(15px);
-	border-radius: 100px;
+	border-radius: 10px;
 }
 
 #header {
 	position: absolute;
-	width: 744px;
-	height: 110px;
-	left: calc(50% - 744px/2);
-	top: 234px;
+width: 744px;
+height: 110px;
+left: calc(50% - 744px/2);
+top: 93px;
 	font-family: 'myFont', Arial;
 	font-size: 64px;
 	line-height: 74px;
@@ -47,7 +47,7 @@ body {
 	width: 286px;
 	height: 267px;
 	left: calc(50% - 274px/2);
-	top: 426px;
+top: 264px;
 	background: url(logo.png) no-repeat center center;
 }
 
@@ -56,7 +56,7 @@ body {
 	width: 226px;
 	height: 141px;
 	left: calc(50% - 226px/2);
-	top: 781px;
+	top: 617px;
 	font-family: Arial;
 	font-style: normal;
 	font-weight: normal;
@@ -66,6 +66,15 @@ body {
 	align-items: center;
 	text-align: center;
 	color: #FFFFFF;
+}
+
+#loader {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	left: 290px;
+	top: 758px;
+	background: url(loader.gif) no-repeat center center;
 }
 
 #field {
