--- a/xoxo/xoxo.css
+++ b/xoxo/xoxo.css
@@ -17,7 +17,7 @@ body {
 #loadScreen {
 	position: absolute;
 	display: block;
-	z-index: 3;
+	z-index: 4;
 	width: 780px;
 	height: 1100px;
 	left: calc(50% - 780px/2);
@@ -169,6 +169,125 @@ top: 727px;
 
 .easy {
 	color: #42A61F;
+}
+
+#difWindow {
+position: absolute;
+display: none;
+width: 571px;
+height: 405px;
+left: calc(50% - 571px/2 + 86.5px);
+top: 310px;
+background: rgba(133, 200, 221, 0.5);
+border: 1px solid #1371C8;
+box-sizing: border-box;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+backdrop-filter: blur(20px);
+border-radius: 10px;
+z-index: 3;
+}
+
+#chooseDifHeader {
+position: absolute;
+width: 571px;
+height: 36px;
+left: calc(50% - 571px/2);
+top: 37px;
+font-family: Arial;
+font-style: normal;
+font-weight: normal;
+font-size: 36px;
+line-height: 42px;
+display: block;
+align-items: center;
+text-align: center;
+color: #FFFFFF;
+}
+
+#difWindowText {
+position: absolute;
+width: 571px;
+height: 28px;
+left: calc(50% - 571px/2);
+top: 92px;
+font-family: Arial;
+font-style: normal;
+font-weight: normal;
+font-size: 28px;
+line-height: 33px;
+display: block;
+align-items: center;
+text-align: center;
+color: #FFFFFF;
+}
+
+#easyButton {
+position: absolute;
+width: 453px;
+height: 78px;
+left: calc(50% - 453px/2);
+top: 188px;
+border-radius: 10px;
+}
+
+#easyText {
+	position: absolute;
+width: 450px;
+height: 78px;
+left: calc(50% - 450px/2);
+top: 0px;
+font-family: Arial;
+font-style: normal;
+font-weight: normal;
+font-size: 36px;
+line-height: 78px;
+display: block;
+align-items: center;
+text-align: center;
+color: #FFFFFF;
+}
+
+.unselEasyBut {
+background: url(easyButtonUnselected.png) no-repeat center center;
+}
+
+.selEasyBut {
+background: url(easyButtonSelected.png) no-repeat center center;
+}
+
+#normalButton {
+position: absolute;
+width: 453px;
+height: 78px;
+left: calc(50% - 453px/2 + 1px);
+top: 290px;
+border-radius: 10px;
+}
+
+#normText {
+	position: absolute;
+width: 453px;
+height: 78px;
+left: calc(50% - 453px/2 - 1px);
+top: 2px;
+font-family: Arial;
+font-style: normal;
+font-weight: normal;
+font-size: 36px;
+line-height: 78px;
+display: block;
+align-items: center;
+text-align: center;
+color: #FFFFFF;
+
+}
+
+.unselNormBut {
+background: url(normalButtonUnselected.png) no-repeat center center;
+}
+
+.selNormBut {
+	background: url(normalButtonSelected.png) no-repeat center center;
 }
 
 #board {
